fix: removed chained methods using board representation